tests/m3/hopix/typechecker/bad/recfuns3.hopix
fun f (x : int, s : string) : int =
  f (x + 1, s) + g (x, s)
and g (x : int) : int =
  g (f (0, "yo"))